2007-03-20  Mohammad DAMT  <mdamt@gnome.org>

	* boards/wordsgame/default-id.xml: Indonesian words by Umar Said <umarsaid@gmail.com>

2007-03-20  Yves Combe <yves@ycombe.net>

	Import modified version of inkscape version of imendio script.
	Allow gcompris dependencies build for OSX.

	* macosx/build-gtk.sh:
	* macosx/config.h:
	* macosx/glibconfig.h:

2007-03-20  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/boardicons/*: moved in boards/skins/gartoon/
	* boards/boardicons/README: updated to reference Mathieu
	* src/boards/menu2.c: (create_panel), (menu_create_item),
	(create_top): updated to use icons from the skin directory
	* src/gcompris/gcompris.c: (main): moved gc_skin_load() down in the
	startup process. The gartoon skin style was never used, even when gartoon
	was selected.

2007-03-19  Bruno coudoin  <bruno.coudoin@free.fr>

	These Images are an original creation of Mathieu Ignacio. Released under GPL.

	boards/boardicons/fun.png
	boards/boardicons/computer.png
	boards/boardicons/experience.png
	boards/boardicons/book.png
	boards/boardicons/math.png
	boards/boardicons/puzzles.png
	boards/boardicons/discovery.png
	boards/boardicons/strategy.png

	* configure.in: removed unneeded defines for sounds release version.

2007-03-19  Yves Combe <yves@ycombe.net>

	fix compilation problem without --enable-nsbundle

	* configure.in:
	* src/gcompris/gcompris.c: (main):

2007-03-19  Bruno coudoin  <bruno.coudoin@free.fr>

	* configure.in: set _AM_DEPENDENCIES([OBJC]) or we get error
	 am__fastdepOBJC does not appear in AM_CONDITIONAL
	* src/boards/maze.c: (maze_create_item), (game_won), (movePos),
	(is_visible), (gcDisplay), (Display3): added bonus display.

2007-03-19  Yves Combe <yves@ycombe.net>

	Add --enable-nsbundle to configure.in, with foundation/Foundation.h check.
	Add NSBundle usage to reloc in this case
	Add NSBundle construction target in Makefile.am

	* Makefile.am:
	* configure.in:
	* src/gcompris/Makefile.am:
	* src/gcompris/gcompris-nsbundle.h: