@@ -1,3 +1,9 @@
+2007-03-20  Yves Combe <yves@ycombe.net>
+
+	Small correction
+
+	* macosx/build-gtk.sh:
+
 2007-03-20  Mohammad DAMT  <mdamt@gnome.org>
 
 	* boards/wordsgame/default-id.xml: Indonesian words by Umar Said <umarsaid@gmail.com>
